fix: fix canvas overflowing

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -151,8 +151,6 @@
     }
 
     &-canvas {
-      max-height: 100%;
-
       &--loop {
         display: inherit;
         z-index: 1;
